# ensphere

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ensphere/: cli.py  codebook.py  decrypt.py  encrypt.py
src/sphere/: cli.py  coodbook.py  decrypt.py  encrypt.py  entrypt.py  main.py  mapping.py
src/sphere/mapping/: mapping.json
tests/: test_codebook.py  test_decrypt.py  test_encrypt.py
