[project]
name = "ensphere"
version = "0.1.0"
description = ""
authors = [
    {name = "taco-tortilla",email = "tortillataco0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.2.1,<9.0.0)"
]

[project.scripts]
ensphere = "ensphere.cli:cli"

[tool.poetry]
packages = [{include = "ensphere", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
